[gd_scene load_steps=5 format=2]

[ext_resource path="res://Action RPG/Action RPG Resources/World/ShadowAttacker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Action RPG/Action RPG Resources/Player/PlayerV5/PlayerV5.tscn" type="PackedScene" id=2]
[ext_resource path="res://Action RPG/Action RPG Resources/Levels/WorldV5/ShadowCreatures.gd" type="Script" id=3]
[ext_resource path="res://Action RPG/Action RPG Resources/Levels/WorldV6/Wendigo sounds.mp3" type="AudioStream" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerV5" parent="." instance=ExtResource( 2 )]
position = Vector2( 92, 36 )

[node name="ShadowAttacker" parent="." instance=ExtResource( 1 )]
position = Vector2( 35, 36 )

[node name="SoundInstance" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 2.622
